--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
 			<a class="brand" href="/"> 
 				<h1> Empower - Amable Book</h1>
 			</a>
-			<p> A compilation of articles about empowering children</p> 
+			<p> A book about about empowering children</p> 
 
 			<span class="separator">| <span> <a href="http://amable.in">Amable</a>
 			<span class="separator">| <span> <a href="http://geniekids.com">Geniekids</a>
