--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
 
 		<header> 
 			<a class="brand" href="/"> 
-				<h1> Empower - Amable Book</h1>
+				<h1> Empower</h1>
 			</a>
 			<p> A book about about empowering children</p> 
 
