--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,20 +1,4 @@
 @font-face {
-  font-family: 'Cabin Sketch';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Cabin Sketch Regular'), local('CabinSketch-Regular'), 
-  url(http://themes.googleusercontent.com/static/fonts/cabinsketch/v5/d9fijO34zQajqQvl3YHRCaRDOzjiPcYnFooOUGCOsRk.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Cabin Sketch';
-  font-style: normal;
-  font-weight: 700;
-  src: local('CabinSketch Bold'), local('CabinSketch-Bold'), 
-  url(http://themes.googleusercontent.com/static/fonts/cabinsketch/v5/ki3SSN5HMOO0-IOLOj069BAPw1J91axKNXP_-QX9CC8.woff) format('woff');
-}
-
-@font-face {
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 400;
@@ -54,13 +38,12 @@ body {
     font-size: 18px;
     line-height: 1.6em; 
     background-image: url('../img/linedpaper.png');
-    color: #666;
 }
 
 #main h1, h2, h3 {
-  font-family: Cabin Sketch, georgia, times, serif;
+  font-family: PT Sans, georgia, times, serif;
   font-weight: 700;
-  color: green;
+  line-height: 1.2em;
 }
 
 header {
@@ -81,17 +64,9 @@ header {
     max-width: 700px;
 }
 
-a {
-  color: black;
-  text-decoration: none;
-}
 
-header a {
+header, header a {
   color: #DDA155;
-}
-
-a:hover {
-  font-weight: bold;  
 }
 
 .separator {
